Try to use k(0.12)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ alga = "0.6.0"
 env_logger = "0.4.2"
 failure = "0.1"
 glfw = { version = "0.19.0", default-features = false }
-k = "0.11.0"
+k = {version = "0.12", path= "../k"}
 kiss3d = "0.15.0"
 log = "0.3"
 nalgebra = "0.15.0"
